--- a/.github/workflows/main_spring-azure-demo.yml
+++ b/.github/workflows/main_spring-azure-demo.yml
@@ -45,9 +45,9 @@ jobs:
 
     - name: Deploy to Azure Web App
       id: deploy-to-webapp
-      uses: azure/webapps-deploy@v3
+      uses: azure/webapps-deploy@v2
       with:
-        app-name: 'spring-azure-demo'
+        app-name: 'java-springboot-app'
         slot-name: 'production'
         publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
         package: '*.jar'
