--- a/.github/workflows/main_spring-azure-demo.yml
+++ b/.github/workflows/main_spring-azure-demo.yml
@@ -30,6 +30,14 @@ jobs:
         name: java-app
         path: '${{ github.workspace }}/target/*.jar'
 
+    - name: Deploy to Azure Web App
+      id: deploy-to-webapp
+      uses: azure/webapps-deploy@v3
+      with:
+          app-name: 'java-springboot-app'
+          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+          package: '${{ github.workspace }}/target/*.jar'
+
   # deploy:
   #   runs-on: windows-latest
   #   needs: build
@@ -43,9 +51,9 @@ jobs:
   #     with:
   #       name: java-app
 
-    - name: Deploy to Azure Web App
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'java-springboot-app'
-        publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-        package: '*.jar'
+    # - name: Deploy to Azure Web App
+    #   uses: azure/webapps-deploy@v2
+    #   with:
+    #     app-name: 'java-springboot-app'
+    #     publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+    #     package: '*.jar'
